<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/bSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:drawSelectorOnTop="true"
        android:entries="@array/city"
        />

    <Button
        android:id="@+id/bSearch"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:drawableEnd="@android:drawable/ic_menu_mylocation"
        android:padding="8dp"
        android:text="@string/location"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/Lat_text"
        android:layout_width="186dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="Latitude "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/Long_text"
        android:layout_width="172dp"
        android:layout_height="23dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="Longitude "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bSearch" />

    <TextView
        android:id="@+id/City_text"
        android:layout_width="252dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Dhaka, BD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Lat_text" />

    <ImageView
        android:id="@+id/iv_sunrise"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="Sunrise"
        android:src="@drawable/ic_sunrise"
        app:layout_constraintBottom_toTopOf="@+id/tv_sunrise_time"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_sunrise_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="04:00 AM"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/iv_sunset"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="Sunset"
        android:src="@drawable/ic_sunset"
        app:layout_constraintBottom_toTopOf="@+id/tv_sunset_time"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_sunset_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="06:00 PM"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iv_sunset"
        tools:visibility="visible" />

    <Button
        android:id="@+id/View_weather_btn"
        android:layout_width="265dp"
        android:layout_height="48dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="13dp"
        android:text="@string/view_weather1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/City_text"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Date_Time_txt"
        android:layout_width="387dp"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:text="23 December, 2021 02:30PM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/View_weather_btn" />

    <TextView
        android:id="@+id/Celcius_txt"
        android:layout_width="92dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        android:text="33\u2103"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date_Time_txt" />

    <TextView
        android:id="@+id/Farenheit_txt"
        android:layout_width="82dp"
        android:layout_height="53dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="53dp"
        android:text="@string/_33_u2109"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Date_Time_txt" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="100dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/label_humidity"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Celcius_txt" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="104dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_pressure"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <TextView
        android:id="@+id/textView9"
        android:layout_width="103dp"
        android:layout_height="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_visibility"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="72dp"
        android:layout_height="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/label_sunrise"
        app:layout_constraintBottom_toTopOf="@+id/iv_sunrise"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="47dp"
        android:layout_height="24dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="3dp"
        android:text="@string/label_sunset"
        app:layout_constraintBottom_toTopOf="@+id/iv_sunset"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>